# rain-alert

./: README.md  pyproject.toml
rain_alert/: main.py
tests/: test_rain_alert.py
